Correct CSS on mobile devices in landscape orientation

--- a/app/assets/stylesheets/categorydetail.scss
+++ b/app/assets/stylesheets/categorydetail.scss
@@ -13,6 +13,10 @@ categorydetail {
     @media (min-width: $screen-sm-min) {
       height: 90%;
     }
+    @media (max-width: $screen-xs-max) 
+    and (orientation: landscape) {
+      max-height: 45% !important;
+    }
     margin-left: auto;
     margin-right: auto;
     border-style: solid;
