--- a/app/assets/stylesheets/general.scss
+++ b/app/assets/stylesheets/general.scss
@@ -26,7 +26,7 @@ body.welcomes, body.users, body.pictures, body.categories, body.bios, body.sessi
   }
 }
 
-body.pictures-new, body.pictures-create, body.pictures-edit_pictures, body.pictures-edit, body.pictures-update, body.pictures-assign_cat_picture, body.registrations, body.categories, body.bios, body.static {
+body.pictures-new, body.pictures-create, body.pictures-edit_pictures, body.pictures-edit, body.pictures-update, body.pictures-assign_cat_picture, body.registrations, body.categories, body.bios, body.static, body.sessions {
   section.content {
     overflow-y: scroll;
   }
@@ -51,6 +51,8 @@ body.pictures-new, body.pictures-create, body.pictures-edit_pictures, body.pictu
         &.with-header {
           margin-top: -60px;
           padding-top: 50px;
+          margin-left: auto;
+          margin-right: auto;
         }
         .image-wrapper {
           @media (max-width: $screen-xs-max) {
@@ -64,6 +66,11 @@ body.pictures-new, body.pictures-create, body.pictures-edit_pictures, body.pictu
         @media (min-width: $screen-sm-min) {
           height: 100%;
           max-width: 90%;
+        }
+        @media (max-width: $screen-xs-max) 
+        and (orientation: landscape) {
+          max-width: 35%;
+          max-height: 40%;
         }
         max-width: 70%;
       }
