--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -8,10 +8,18 @@ home {
       padding-bottom: 30px;
     }
   }
+  .item-wrapper {
+    margin-left: auto;
+    margin-right: auto;
+  }
   img {
     display: block;
     @media (min-width: $screen-sm-min) {
       height: 100%;
+    }
+    @media (max-width: $screen-xs-max) 
+    and (orientation: landscape) {
+      max-height: 100% !important;
     }
     margin-left: auto;
     margin-right: auto;
